# godotssh

./: .gitignore  NotoSerifSC-Regular.otf.import  QUICKSTART.md  default_theme.tres  icon.svg.import  main.gd  main.gd.uid  main.tscn
ssh_extension/: Cargo.toml  README.md  build.sh  godot-ssh.gdextension  godot-ssh.gdextension.uid
ssh_extension/src/: lib.rs  ssh_client.rs  ssh_session.rs
